# ScepterSDK

./: LICENSE  README.md
3rd-PartyPlugin/: README.md
3rd-PartyPlugin/ROS/src/ScepterROS/: CMakeLists.txt  README.md  install.py  package.xml
3rd-PartyPlugin/ROS/src/ScepterROS_MultiCameras/: CMakeLists.txt  README.md  package.xml  setup.py
3rd-PartyPlugin/ROS/src/ScepterROS_MultiCameras/include/: scepter_manager.hpp
3rd-PartyPlugin/ROS/src/ScepterROS_MultiCameras/launch/: camera1.launch  camera2.launch  pointCloudxyz_camera1.launch  pointCloudxyz_camera2.launch  pointCloudxyzcolor_camera1.launch  pointCloudxyzcolor_camera2.launch  scepter_camera.launch  scepter_pointCloudxyz.launch  scepter_pointCloudxyzcolor.launch
3rd-PartyPlugin/ROS/src/ScepterROS_MultiCameras/src/: scepter_driver.cpp  scepter_manager.cpp
3rd-PartyPlugin/ROS2/src/ScepterROS/: CMakeLists.txt  README.md  install.py  package.xml
3rd-PartyPlugin/ROS2/src/ScepterROS_MultiCameras/: CMakeLists.txt  README.md  package.xml
BaseSDK/: README.md  ReleaseNotes.txt
BaseSDK/AArch64/Include/: Scepter_define.h  Scepter_types.h
BaseSDK/AArch64/Lib/: libScepter_api.so.1.0  libScepter_api.so.1.0.5  libScepter_api.so.1.0.8  libScepter_api.so.1.1.0  libScepter_api.so.1.1.4  libScepter_api.so.24.12.2  libScepter_api.so.24.9  libScepter_api.so.24.9.1
BaseSDK/AArch64/Lib/Config/: NYX650_74.json  VENO86_72.json
BaseSDK/AArch64/PrecompiledSamples/: DS77C_OpenCVSample  DS77_OpenCVSample  DS86_OpenCVSample  NYX650_OpenCVSample  VENO86_OpenCVSample
BaseSDK/AArch64/Samples/OpenCV/DS77C/: CMakeLists.txt
BaseSDK/Ubuntu/Include/: Scepter_Morph_api.h  Scepter_enums.h
BaseSDK/Ubuntu/Lib/: libScepter_api.so.24.9.1
BaseSDK/Ubuntu/PrecompiledSamples/: DS86_OpenCVSample
BaseSDK/Ubuntu16.04/Include/: Scepter_Morph_api.h  Scepter_api.h  Scepter_enums.h  Scepter_types.h
BaseSDK/Ubuntu16.04/Lib/: libScepter_api.so.1.0  libScepter_api.so.1.0.8  libScepter_api.so.1.1  libScepter_api.so.1.1.0  libScepter_api.so.1.1.4  libScepter_api.so.24.12  libScepter_api.so.24.12.2  libScepter_api.so.24.9.1
BaseSDK/Ubuntu16.04/Lib/Config/: VENO87_73.json
BaseSDK/Ubuntu16.04/PrecompiledSamples/: DS77C_OpenCVSample  DS77_OpenCVSample  DS86_OpenCVSample  NYX650_OpenCVSample  VENO86_OpenCVSample
BaseSDK/Ubuntu16.04/Samples/OpenCV/DS77/: CMakeLists.txt  FrameViewer.cpp
BaseSDK/Ubuntu18.04/: README.md  ReleaseNotes.txt
BaseSDK/Ubuntu18.04/Include/: Scepter_api.h
BaseSDK/Ubuntu18.04/Lib/: libScepter_api.so.1.0.5  libScepter_api.so.1.0.8  libScepter_api.so.1.1  libScepter_api.so.1.1.0  libScepter_api.so.1.1.4
BaseSDK/Ubuntu18.04/Lib/Config/: NYX660_75.json  VENO86_72.json  VENO87_73.json
BaseSDK/Ubuntu18.04/PrecompiledSamples/: DS77C_OpenCVSample  DS77_OpenCVSample  DS86_OpenCVSample  NYX650_OpenCVSample  VENO86_OpenCVSample
BaseSDK/Ubuntu18.04/PrecompiledSamples/DS77C_Samples/: ColorExposureTimeSetGet  ColorResolutionChange  DevHotPlugCallbackC  DevHotPlugCallbackCpp  DeviceConnectByIP  DeviceConnectBySN  DeviceHWTriggerMode  DeviceInfoGet  DeviceParamSetGet  DeviceSWTriggerMode  DeviceSearchAndConnect  DeviceSetFrameRate  DeviceSetParamsByJson  DeviceStartStopStreaming  FrameCaptureAndSave  MultiConnection  MultiConnectionInMultiThread  PointCloudCaptureAndSave  PointCloudCaptureAndSaveDepthImgToColorSensor  PointCloudVectorAndSave  PointCloudVectorAndSaveDepthImgToColorSensor  ToFExposureTimeSetGet  ToFFiltersSetGet  TransformColorImgToDepthSensorFrame  TransformDepthImgToColorSensorFrame
BaseSDK/Windows/: README.md  ReleaseNotes.txt
BaseSDK/Windows/Include/: Scepter_Morph_api.h  Scepter_api.h  Scepter_define.h  Scepter_enums.h
BaseSDK/Windows/Lib/x64/: Scepter_api.lib
BaseSDK/Windows/Lib/x86/: Scepter_api.lib
MultilanguageSDK/: README.md
MultilanguageSDK/CSharp/: README.md  install.py
MultilanguageSDK/CSharp/Samples/DS77/: DS77_Samples.sln
MultilanguageSDK/CSharp/Samples/DS77C/: DS77C_Samples.sln
MultilanguageSDK/CSharp/Samples/DS86/: DS86_Samples.sln
MultilanguageSDK/CSharp/Samples/Morph/: Morph_Samples.sln
MultilanguageSDK/Python/: README.md
MultilanguageSDK/Python/API/: ScepterDS_api.py  ScepterDS_define.py  ScepterDS_enums.py  ScepterDS_types.py
(+657 files in other folders)
